small workflow adjustments

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,11 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
+        - name: Setup Node
+          uses: actions/setup-node@v3
           with:
-            node-version: 18.x
-        - run: pnpm install
-        - run: pnpm run build
+            node-version: "18"
+            cache: ${{ steps.detect-package-manager.outputs.manager }}
+        - run: npm install
+        - run: npm run build
         - uses: actions/upload-pages-artifact@v1
           with:
             path: dist/
