--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
+  "name": "xinto",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "start": "vite",
@@ -11,14 +11,14 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0",
-    "vite-plugin-solid-svg": "^0.6.0"
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-solid": "^2.9.1",
+    "vite-plugin-solid-svg": "^0.8.0"
   },
   "dependencies": {
-    "@solidjs/router": "^0.5.0",
-    "solid-js": "^1.5.1"
+    "@solidjs/router": "^0.10.10",
+    "solid-js": "^1.8.12"
   }
 }
